@@ -31,13 +31,25 @@
 <body>
 
 <p class="windows">
-    <strong>Windows Support</strong> is <a href="http://cyberduck.ch/news/">coming</a> in 4.0. <a
-        href="mailto:feedback@cyberduck.ch?subject=Windows Private Beta">Sign up</a> now for the private beta!
+    <strong>Windows Support</strong> is <a href="http://cyberduck.ch/news/">coming</a> in 4.0. Public Beta available Dec
+    13 2010.
 </p>
 
 <p class="note">
     <strong>Note</strong>: <strong>OS X 10.5 (Leopard)</strong> or later is required.
 </p>
+
+
+<strong><a href=
+                   "http://trac.cyberduck.ch/milestone/4.0">Version 4.0</a></strong><br/>
+
+<ul>
+    <li>[Feature] Version for Microsoft Windows XP, Windows Vista & Windows 7.</li>
+    <li>[Feature] Replaced protocol implementation (FTP)</li>
+    <li>[Feature] Connecting to Windows Azure Blob Storage (Azure) (<a
+            href="http://trac.cyberduck.ch/ticket/3938">#3938</a>)
+    </li>
+</ul>
 
 <strong><a href=
                    "http://trac.cyberduck.ch/milestone/3.8.1">Version 3.8.1</a></strong><br/>
